# listenbrainz-lidarr-sync

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
listenbrainz_lidarr_sync/: __init__.py  __main__.py  config.py  json_types.py  lidarr.py  listenbrainz.py  models.py  musicbrainz.py  sync.py  telegram.py
tests/: __init__.py  test_config.py  test_listenbrainz.py  test_musicbrainz.py  test_sync.py  test_telegram.py
